--- a/asio project/asio project.vcxproj.filters
+++ b/asio project/asio project.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClCompile Include="queue.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="asyncServer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="all.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="queue.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="tokenMap.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
