--- a/feeds/Makefile
+++ b/feeds/Makefile
@@ -10,7 +10,7 @@ BUILDDIR = ./bin/
 
 $(shell mkdir -p $(BUILDDIR)) # -p will not throw error if it alredy exits
 
-${BUILDDIR}final: ${BUILDDIR}main.o ${BUILDDIR}client.o ${BUILDDIR}queue.o ${BUILDDIR}server.o ${BUILDDIR}asyncServer.o
+${BUILDDIR}final: ${BUILDDIR}main.o ${BUILDDIR}client.o ${BUILDDIR}asyncServer.o
 	@echo "Linking Project"
 	@${COMPILER} $^ -o $@ ${LDLIBS} ${LDFLAGS}
 
@@ -27,14 +27,6 @@ ${BUILDDIR}client.o: ${code}client.cpp
 	@echo "Compiling client.c"
 	@${COMPILER} ${LDLIBS} -c $< -o $@ ${CFLAGS}
 
-${BUILDDIR}queue.o: ${code}queue.cpp
-	@echo "Compiling queue.c"
-	@${COMPILER} ${LDLIBS} -c $< -o $@ ${CFLAGS}
-
-${BUILDDIR}server.o: ${code}server.cpp
-	@echo "Compiling server.c"
-	@${COMPILER} ${LDLIBS} -c $< -o $@ ${CFLAGS}
-
 ${BUILDDIR}asyncServer.o: ${code}asyncServer.cpp 
 	@echo "Compiling asyncServer.c"
 	@${COMPILER} ${LDLIBS} -c $< -o $@ ${CFLAGS}
@@ -42,11 +34,3 @@ ${BUILDDIR}asyncServer.o: ${code}asyncServer.cpp
 clean:
 	@echo "Cleaning Build"
 	rm -f $(BUILDDIR)*.o $(BUILDDIR)final
-
-
-test: ${code}asyncServer.cpp
-	@echo "Compiling asyncServer.c"
-	@${COMPILER} ${LDLIBS} $< -o ${BUILDDIR}test  ${CFLAGS} ${LDFLAGS} -lzmq
-	chmod +x ${BUILDDIR}test
-	clear
-	${BUILDDIR}test
